bin/tests/errors/sema/sema_err_not_type_compiler_gettag.swg
#global fileprivate

#test { const A = #gettag("User.Flag", true, false) } // swc-expected-error {{sema_err_not_type}}
